@@ -1,5 +1,9 @@
 == 12.6.3
 
+- Changed crawler to save, at most, one address per /24 subnet in
+  "boostrap.backup". This should give some protection against an adversary
+  running many malicious nodes on a subnet. It should also add robustness.
+
 == 12.6.2
 
 - clean up boostrap data structure when bootstrap is done
